force-app/main/default/objects/Hiring_Rep_Action_Plan__c/Hiring_Rep_Action_Plan__c.object-meta.xml
<CustomObject>
    <label>Sales Rep Action Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep Action Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>