force-app/main/default/objects/Hiring_Rep_Action_Plan__c/fields/Action_Support__c.field-meta.xml
<CustomField>
    <fullName>Action_Support__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action / Support</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>