force-app/main/default/objects/Hiring_Rep_Action_Plan__c/fields/Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan__c</fullName>
    <label>Business Plan</label>
    <referenceTo>Business_Plan__c</referenceTo>
    <relationshipName>Hiring_Rep_Action_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>