force-app/main/default/objects/Hiring_Rep_Action_Plan__c/fields/Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Amount__c</fullName>
    <label>Dollar Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>