force-app/main/default/objects/Hiring_Rep_Action_Plan__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Business_Plan__c</field>
            <operation>equals</operation>
            <valueField>Opportunity.Product_Sales_Summary__r.Business_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Rep Action Plan</relationshipLabel>
    <relationshipName>Sales_Rep_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>