force-app/main/default/objects/Hiring_Rep_Action_Plan__c/fields/Qtr_Timing__c.field-meta.xml
<CustomField>
    <fullName>Qtr_Timing__c</fullName>
    <label>Qtr  Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>