force-app/main/default/objects/Hiring_Rep_Action_Plan__c/fields/Rep_Details__c.field-meta.xml
<CustomField>
    <fullName>Rep_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Details</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Hiring_Rep_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>