force-app/main/default/objects/Hiring_Rep_Action_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under-performing Reps</fullName>
            </value>
            <value>
                <fullName>Competitive Sales Rep Conversion Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>