force-app/main/default/objects/Hiring_Rep_Action_Plan__c/recordTypes/AT_Risk.recordType-meta.xml
<RecordType>
    <fullName>AT_Risk</fullName>
    <active>true</active>
    <label>AT Risk</label>
</RecordType>