force-app/main/default/objects/Hiring_Rep_Action_Plan__c/recordTypes/Competitive_Sales.recordType-meta.xml
<RecordType>
    <fullName>Competitive_Sales</fullName>
    <active>true</active>
    <label>Competitive Sales</label>
</RecordType>