force-app/main/default/objects/Hiring_Rep_Action_Plan__c/recordTypes/Future_Leaders.recordType-meta.xml
<RecordType>
    <fullName>Future_Leaders</fullName>
    <active>true</active>
    <label>Future Leaders</label>
</RecordType>