force-app/main/default/objects/Hiring_Rep_Action_Plan__c/recordTypes/Under_Performing.recordType-meta.xml
<RecordType>
    <fullName>Under_Performing</fullName>
    <active>true</active>
    <label>Under Performing</label>
</RecordType>